--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -458,9 +458,9 @@ left: 10px;
     margin-top: 3px;
     margin-right: 3px ;
     width: 18%;
-    border-style: solid ;
+    /* border-style: solid ;
     border-color: #26BD99;
-    border-width: 1px;
+    border-width: 1px; */
   }
 
   .inside_gallery{
@@ -488,7 +488,7 @@ left: 10px;
    /* Popup container */
 /* Style The Dropdown Button */
 .dropbtn {
-  background-color: #4CAF50;
+  background-color: #6b6d6b;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -500,6 +500,7 @@ left: 10px;
 .dropdown {
   position: relative;
   display: inline-block;
+  
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -507,7 +508,7 @@ left: 10px;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  width: 500px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -525,12 +526,12 @@ left: 10px;
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-  display: block;
+  display: contents;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+  background-color: #26BD99;
 }
 
   .uni-name h{
